# bitshow

./: .buckconfig  .gitignore  BUCK  bitshow.cpp  bitshow.hpp  buckaroo.json  conanfile.py  ieee_format.hpp  readme.md
src/: CMakeLists.txt  bitshow.cpp  bitshow.h  bitshow.hpp  details.hpp  masks.h  types.hpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
